bad/mod_invalid_types_string_string.example_compiler_output
ERROR
[1mbad/mod_invalid_types_string_string.lat:3:5: [1;31merror: [0;1mmodulo is defined only for int values, not `string` and `string`[m
	"" % "";
	   [1;32m^[m
